2014-08-26  Andy Buckley  <andy.buckley@cern.ch>

	* Add calc() methods to Hemispheres as requested, to allow it to
	be used with Jet or FourMomentum inputs outside the normal
	projection system.

2014-08-17  Andy Buckley  <andy.buckley@cern.ch>

	* Improvements to the particles methods on
	ParticleFinder/FinalState, in particular adding the range of cuts
	arguments cf. JetAlg (and tweaking the sorted jets equivalent) and
	returning as a copy rather than a reference if cut/sorted to avoid
	accidentally messing up the cached copy.

	* Creating ParticleFinder projection base class, and moving
	Particles-accessing methods from FinalState into it.

	* Adding basic forms of MC_ELECTRONS, MC_MUONS, and MC_TAUS
	analyses.

2014-08-15  Andy Buckley  <andy.buckley@cern.ch>

	* Version bump to 2.2.0beta1 for use at BOOST and MCnet school.

2014-08-13  Andy Buckley  <andy.buckley@cern.ch>

	* New analyses:
	ATLAS_2014_I1268975 (high mass dijet cross-section at 7 TeV)
	ATLAS_2014_I1304688 (jet multiplicity and pT at 7 TeV)
	ATLAS_2014_I1307756 (scalar diphoton resonance search at 8 TeV -- no histograms!)
	CMSTOTEM_2014_I1294140 (charged particle pseudorapidity at 8 TeV)

2014-08-09  Andy Buckley  <andy.buckley@cern.ch>

	* Adding PromptFinalState, based on code submitted by Alex
	Grohsjean and Will Bell. Thanks!

2014-08-06  Andy Buckley  <andy.buckley@cern.ch>

	* Adding MC_HFJETS and MC_JETTAGS analyses.

2014-08-05  Andy Buckley  <andy.buckley@cern.ch>

	* Update all analyses to use the xMin/Max/Mid, xMean, xWidth,
	etc. methods on YODA classes rather than the deprecated lowEdge
	etc.

	* Merge new HasPID functor from Holger Schulz into
	Rivet/Tools/ParticleUtils.hh, mainly for use with the any()
	function in Rivet/Tools/Utils.hh

2014-08-04  Andy Buckley  <andy.buckley@cern.ch>

	* Add ghost tagging of charms, bottoms and taus to FastJets, and
	tag info accessors to Jet.

	* Add constructors from and cast operators to FastJet's PseudoJet
	object from Particle and Jet.
